<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="summaryFragment"
            type="com.example.lunchtray.SummaryFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SummaryFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/order_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/menu_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Three Been Chili"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_summary" />

            <TextView
                android:id="@+id/price_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price 1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_summary" />

            <TextView
                android:id="@+id/menu_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Menu 2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_1" />

            <TextView
                android:id="@+id/price_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price 2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_1" />

            <TextView
                android:id="@+id/menu_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Menu 3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_2" />

            <TextView
                android:id="@+id/price_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price 3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_2" />

            <View
                android:id="@+id/horizontal_line_d"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/price_3" />


            <TextView
                android:id="@+id/subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_line_d" />

            <TextView
                android:id="@+id/tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtotal" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tax" />

            <Button
                android:id="@+id/submit_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="@{() -> summaryFragment.submitOrder()}"
                android:text="@string/submit_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="@{() -> summaryFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submit_order" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>